# alletaal-lint

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  METHODOLOGY.md  Makefile  README.md  analyze_formula.py  docker-compose.yml  publiccode.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  methodology_question.md
.github/workflows/: compatibility.yml  quality.yml  test.yml
src/alletaal_lint/: __init__.py  api.py  cli.py  core.py
tests/: __init__.py  test_api.py  test_cli.py  test_core.py
